--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 This software is licensed under GPL Version 2.0+
 
-Please check inside doc directory for documentation.
+Please check inside doc directory for documentation or
+the online documentation (generated from doc/) at:
+
+http://sbabic.github.io/swupdate
