Add reference to ML to README
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/README
+++ b/README
@@ -3,4 +3,8 @@ This software is licensed under GPL Version 2.0+
 Please check inside doc directory for documentation or
 the online documentation (generated from doc/) at:
 
-http://sbabic.github.io/swupdate
+	http://sbabic.github.io/swupdate
+
+There is a mailing list for this project. You can send your questions to:
+
+	swupdate@googlegroups.com
