fix a lot of minor typos
Fix around 45 typos, misspellings and common grammatical errors.

These typos have minimal impact on the code as these are mostly in the
doc files or in comments inside the code files.

Signed-off-by: Abdur Rehman <abdur_rehman@mentor.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -736,7 +736,7 @@ swupdate (2016.07) stable; urgency=medium
   [ Stefano Babic ]
   * Prepare 2016.07-rc2
   * Fix licensing issue due to cpio
-  * Fix mispelling in usage help
+  * Fix misspelling in usage help
   * Allow filename with the same name into sw-description
   * Enhance output when searching for LUA handlers
 
